--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.468.0"
+    "lucide-react": "^0.468.0",
+    "axios": "^1.7.9",
+    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
